# knowlede-management

./: .dockerignore  .env  .flake8  .gitignore  DEVELOPMENT.md  DISTRIBUTION.md  Dockerfile  GitHub_Actions設定手順.md  Makefile  Makefile_windows  README.md  UI_DESIGN.md  USER_GUIDE.md  add_display_name_column.sql  debug_customtkinter.py  docker-compose.yml  mac_gui_fix.py  material_design_app.py  modern_tkinter_app.py  modern_ui_preview.py  package-lock.json  package.json  pyproject.toml  pytest.ini  remove_display_name_column.sql  requirements.txt  rich_modern_app.py  run_app.py  setup.py  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  video_thumbnail_app.py
.cursor/commands/: implement.md  plan.md  specify.md  tasks.md
.cursor/rules/: common-base-rule.mdc
.github/workflows/: build-windows.yml  rss-fetch.yml
.next/: app-build-manifest.json  trace
.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
.serena/: project.yml
.serena/memories/: project_commands.md  project_overview.md  style_and_conventions.md  tech_stack_and_structure.md
.spec-workflow/: session.json
app/: globals.css  layout.tsx  middleware.ts  page.tsx
app/posts/: page.tsx
components/: AutoRedirect.tsx  Header.tsx  LogoutButton.tsx  PostEditor.tsx  ShareButton.tsx
hooks/: useInfiniteScroll.ts
public/: site.webmanifest
scripts/: create_icon.py
src/: __init__.py  main.py  psg_main.py  tk_main.py
templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
tests/: __init__.py  conftest.py
(+267 files in other folders)
